# QRcardGenerator

./: CMakeLists.txt  README.md  main  main.cpp
